[package]
name = "cache_oblivious_b_tree"
version = "0.1.0"
authors = ["Jahfer Husain <echo@jahfer.com>"]
edition = "2018"

[dependencies]
num-rational = "0.3"

[dev-dependencies]
criterion = "0.3"
cargo-criterion = "1.0.0"

[[bench]]
name = "bench_main"
harness = false

[profile.release]
debug = true

[[bin]]
name = "manual_benchmark"
path = "src/manual_benchmark.rs"
test = false
bench = false