[package]
name = "cache_oblivious_b_tree"
version = "0.1.0"
authors = ["Jahfer Husain <echo@jahfer.com>"]
edition = "2018"

[dependencies]
num-rational = "0.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false

[profile.release]
debug = true

[[bin]]
name = "manual_benchmark"
path = "src/manual_benchmark.rs"
test = false
bench = false